<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorMainBackground"
    tools:context=".OrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="7dp"
            android:text="@string/textView1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/editText1"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginBottom="7dp"
            android:text="@string/textView2"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/editText2"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginBottom="7dp"
            android:text="@string/textView3"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/editText3"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginBottom="7dp"
            android:text="@string/textView4"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/editText4"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginBottom="7dp"
            android:text="@string/textView5"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/editText5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="7dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginBottom="7dp"
            android:text="@string/textView6"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/spinner1"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="213dp"
            android:layout_height="31dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="15dp"
            android:entries="@array/type_of_transport"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonOrderComplete"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="35dp"
            android:background="@drawable/button"
            android:text="@string/buttonOrderComplete" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>